Fixed alignment issue on Club history main text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ header {
 
 #club-history {
     padding: 20px;
+    text-align: justify;
 }
 
 /*---- Events Page ----*/
